--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-notify-alerts",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "displayName": "Notify Alerts",
   "description": "A HomeBridge plugin that sends notifications via Notify API webhooks using switches",
   "main": "dist/index.js",
@@ -19,6 +19,11 @@
   ],
   "author": "",
   "license": "Apache-2.0",
+  "files": [
+    "dist",
+    "config.schema.json",
+    "homebridge-ui"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/simplytoast1/homebridge-notify-alerts.git"
